fix z-index in login bar

--- a/public/assets/style.css
+++ b/public/assets/style.css
@@ -99,7 +99,7 @@ h1.logo {
 
 .sub-header .slider img.curve {
 	position: absolute;
-	z-index: 999;
+	z-index: 98;
 	bottom: 1px;
 }
 
